--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,15 @@
         {% endblock %}
     </head>
     <body>
+        {% block nav %}
+        {% if is_granted('ROLE_USER') %}
+            <a href="{{path('new_todo')}}"><button>Ajouter</button></a>
+            <a href="{{path('logout')}}" ><button>se déconnecter</button></a>
+        {% endif %}
+         {% if not is_granted('ROLE_USER') %}
+         <a href="{{path('app_login')}}" ><button>connexion</button></a>
+         {% endif %}
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
