--- a/templates/todo_list/index.html.twig
+++ b/templates/todo_list/index.html.twig
@@ -12,11 +12,11 @@
     <h1>Todo List : </h1>
     <h2 class="ml-10" >Bonjour {{ nom }}</h2>
 
-<table class="table" border>
+<table class="table border-primary" >
 <thead>
 <tr class="">
 <td>n°</td><td>date</td><td>auteur</td><td class="col-6">description</td><td>comment</td>
-<td>modif/</td><td>par</td><td>date</td>
+<td>modif/</td><td>par</td><td>date</td><td colspan(2)>actions</td>
 </tr>
 </thead>
 <tbody>
@@ -36,13 +36,16 @@
     {# the argument of csrf_token() is an arbitrary string used to generate the token #}
     <input type="hidden" name="token" value="{{ csrf_token('delete-item') }}"/>
 
-    <button class="text-bg-danger p-3" type="submit">Supprimer</button>
+    <button class="text-bg-danger p-1" type="submit">Supprimer</button>
 </form></td>
-<td><a href="{{path('update_todo', {id: todo.id})}}"><button class="text-bg-primary p-3" >modifier</button></a></td>
+<td><a href="{{path('update_todo', {id: todo.id})}}"><button class="text-bg-primary p-1" >modifier</button></a></td>
 
 {% endif %}
 </tr>
+
 {% endfor %}
+</tbody>
+</table>
 
 
 
