--- a/templates/todo_list/index.html.twig
+++ b/templates/todo_list/index.html.twig
@@ -3,12 +3,9 @@
 {% block title %}Todolist{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
+
+<div class="example-wrapper m-2">
     <h1>Todo List : </h1>
     <h2 class="ml-10" >Bonjour {{ nom }}</h2>
 
@@ -24,10 +21,13 @@
 <tr>
 <td>{{ todo.id }}</td>
 <td>{{ todo.created|date("d/m/Y") }}</td>
-<td>{{ todo.auteur }}</td>
-<td class="col-4">{{ todo.description }}</td>
-<td>{{ todo.comment }}</td>
-<td>{{ todo.reponse }}</td>
+<td>
+{%if(todo.user)%}
+{{ todo.user.nom }}
+{% endif %}</td>
+<td class="col-3">{{ todo.description }}</td>
+<td class="col-3">{{ todo.comment }}</td>
+<td class="col-3">{{ todo.reponse }}</td>
 <td>{{ todo.auteurReponse }}</td>
 <td>{{ todo.dateReponse|date("d/m/Y")}}</td>
 
