fixtures avec users en FK affiche compte todos persos

--- a/templates/todo_list/account.html.twig
+++ b/templates/todo_list/account.html.twig
@@ -18,7 +18,7 @@
 </tr>
 </thead>
 <tbody>
-    {% for todo in todolist%}
+    {% for todo in user.todoLists %}
 <tr>
 <td>{{ todo.id }}</td>
 <td>{{ todo.created|date("d/m/Y") }}</td>
@@ -29,10 +29,13 @@
 <td class="col-3">{{ todo.description }}</td>
 <td class="col-3">{{ todo.comment }}</td>
 <td class="col-3">{{ todo.reponse }}</td>
-{%if(todo.commentUser)%}
-<td>{{ todo.commentUser.nom }}</td>
+<td>{%if(todo.commentUser)%}
+{{ todo.commentUser.nom }}</td>
 {% endif %}
-<td>{{ todo.dateReponse|date("d/m/Y")}}</td>
+<td>
+{%if(todo.commentUser)%}
+{{ todo.dateReponse|date("d/m/Y")}}
+{% endif %}</td>
 
 {% if is_granted('ROLE_USER') %}
 <td><form action="todolist/delete/{{todo.id}}" method="post">
@@ -50,8 +53,50 @@
 </tbody>
 </table>
 
+<h4>vos todo commentés</h4>
 
+<table class="table border-primary" >
+<thead>
+<tr class="">
+<td>n°</td><td>date</td><td>auteur</td><td class="col-6">description</td><td>comment</td>
+<td>modif/</td><td>par</td><td>date</td><td colspan(2)>actions</td>
+</tr>
+</thead>
+<tbody>
+    {% for todo in user.todoListComments %}
+<tr>
+<td>{{ todo.id }}</td>
+<td>{{ todo.created|date("d/m/Y") }}</td>
+<td>
+{%if(todo.user)%}
+{{ todo.user.nom }}
+{% endif %}</td>
+<td class="col-3">{{ todo.description }}</td>
+<td class="col-3">{{ todo.comment }}</td>
+<td class="col-3">{{ todo.reponse }}</td>
+<td>{%if(todo.commentUser)%}
+{{ todo.commentUser.nom }}</td>
+{% endif %}
+<td>
+{%if(todo.commentUser)%}
+{{ todo.dateReponse|date("d/m/Y")}}
+{% endif %}</td>
 
+{% if is_granted('ROLE_USER') %}
+<td><form action="todolist/delete/{{todo.id}}" method="post">
+    {# the argument of csrf_token() is an arbitrary string used to generate the token #}
+    <input type="hidden" name="token" value="{{ csrf_token('delete-item') }}"/>
+
+    <button class="text-bg-danger p-1" type="submit">Supprimer</button>
+</form></td>
+<td><a href="{{path('update_todo', {id: todo.id})}}"><button class="text-bg-primary p-1" >modifier</button></a></td>
+
+{% endif %}
+</tr>
+
+{% endfor %}
+</tbody>
+</table>
 
 </div>
 
