--- a/templates/todo_list/account.html.twig
+++ b/templates/todo_list/account.html.twig
@@ -3,18 +3,20 @@
 {% block title %}Todolist{% endblock %}
 
 {% block body %}
+{#espace perso affichage des posts rédigés et des réponses rédigées sur les autrezs posts 
+le bouton Supprimer n'est accessible que sur les posts dont l'auteur est l'utilisateur du compte#}
 
 <div class="example-wrapper">
     <h1>Mon compte </h1>
     <h2>Bonjour {{ user.nom }}</h2>
     <h4>votre adresse mail : {{user.email}}</h4>
-    <h4>vos todo</h4>
-
+    <h4>vos posts : </h4>
+{#affichage dans un tableau de tous les posts rédigés#}
 <table class="table border-primary" >
 <thead>
 <tr class="">
 <td>n°</td><td>date</td><td>auteur</td><td class="col-6">description</td><td>comment</td>
-<td>modif/</td><td>par</td><td>date</td><td colspan(2)>actions</td>
+<td>réponse</td><td>par</td><td>date</td><td colspan(2)>actions</td>
 </tr>
 </thead>
 <tbody>
@@ -37,29 +39,33 @@
 {{ todo.dateReponse|date("d/m/Y")}}
 {% endif %}</td>
 
-{% if is_granted('ROLE_USER') %}
+<td><a href="{{path('update_todo', {id: todo.id})}}"><button class="text-bg-primary p-1" >Répondre</button></a></td>
+
+{% if (is_granted('ROLE_ADMIN')) or  (is_granted('ROLE_USER') and todo.user.id == user.id)  %}
 <td><form action="todolist/delete/{{todo.id}}" method="post">
     {# the argument of csrf_token() is an arbitrary string used to generate the token #}
     <input type="hidden" name="token" value="{{ csrf_token('delete-item') }}"/>
 
     <button class="text-bg-danger p-1" type="submit">Supprimer</button>
 </form></td>
-<td><a href="{{path('update_todo', {id: todo.id})}}"><button class="text-bg-primary p-1" >modifier</button></a></td>
-
 {% endif %}
 </tr>
 
 {% endfor %}
 </tbody>
 </table>
+{#affichage dans un tableau de toutes les réponses rédigées#}
 
-<h4>vos todo commentés</h4>
-
+<h3>Les posts que vous avez commentés</h3>
+{% if user.todoListComments is empty%}
+<h4>Il n'y a rien à afficher...</h4>
+{% endif %}
+{% if user.todoListComments is not empty %}
 <table class="table border-primary" >
 <thead>
 <tr class="">
 <td>n°</td><td>date</td><td>auteur</td><td class="col-6">description</td><td>comment</td>
-<td>modif/</td><td>par</td><td>date</td><td colspan(2)>actions</td>
+<td>réponse</td><td>date</td><td colspan(2)>actions</td>
 </tr>
 </thead>
 <tbody>
@@ -74,30 +80,26 @@
 <td class="col-3">{{ todo.description }}</td>
 <td class="col-3">{{ todo.comment }}</td>
 <td class="col-3">{{ todo.reponse }}</td>
-<td>{%if(todo.commentUser)%}
-{{ todo.commentUser.nom }}</td>
-{% endif %}
 <td>
-{%if(todo.commentUser)%}
 {{ todo.dateReponse|date("d/m/Y")}}
-{% endif %}</td>
+</td>
 
-{% if is_granted('ROLE_USER') %}
+<td><a href="{{path('update_todo', {id: todo.id})}}"><button class="text-bg-primary p-1" >Répondre</button></a></td>
+
+{% if (is_granted('ROLE_ADMIN')) or  (is_granted('ROLE_USER') and todo.user.id == user.id)  %}
 <td><form action="todolist/delete/{{todo.id}}" method="post">
     {# the argument of csrf_token() is an arbitrary string used to generate the token #}
     <input type="hidden" name="token" value="{{ csrf_token('delete-item') }}"/>
 
     <button class="text-bg-danger p-1" type="submit">Supprimer</button>
 </form></td>
-<td><a href="{{path('update_todo', {id: todo.id})}}"><button class="text-bg-primary p-1" >modifier</button></a></td>
-
 {% endif %}
 </tr>
 
 {% endfor %}
 </tbody>
 </table>
-
+{% endif %}
 </div>
 
 
