--- a/templates/todo_list/account.html.twig
+++ b/templates/todo_list/account.html.twig
@@ -3,15 +3,15 @@
 {% block title %}Todolist{% endblock %}
 
 {% block body %}
-{#espace perso affichage des posts rédigés et des réponses rédigées sur les autrezs posts 
-le bouton Supprimer n'est accessible que sur les posts dont l'auteur est l'utilisateur du compte#}
+{# espace perso affichage des posts rédigés et des réponses rédigées sur les autres posts 
+le bouton Supprimer n'est accessible que sur les posts dont l'auteur est l'utilisateur du compte #}
 
 <div class="example-wrapper">
     <h1>Mon compte </h1>
     <h2>Bonjour {{ user.nom }}</h2>
     <h4>votre adresse mail : {{user.email}}</h4>
     <h4>vos posts : </h4>
-{#affichage dans un tableau de tous les posts rédigés#}
+{# affichage dans un tableau de tous les posts rédigés #}
 {% if user.todoLists is not empty %}
 <table class="table border-primary" >
 <thead>
@@ -102,6 +102,8 @@ le bouton Supprimer n'est accessible que sur les posts dont l'auteur est l'utili
 {% else %}
 <h4>Il n'y a rien à afficher...</h4>
 {% endif %}
+
+
 </div>
 
 
